deploy/k8s/ingresses/bootstrap-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: bootstrap-ingressroute-http-8099
  namespace: bootstrap-service
spec:
  entryPoints:
    - bootstrap-http
  routes:
  - match: HostSNI(`bootstrap.ubsv.dev`)
    services:
    - name: bootstrap-service
      port: 8099
  tls:
    passthrough: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: bootstrap-ingressroute-grpc-8089
  namespace: bootstrap-service
spec:
  entryPoints:
    - bootstrap-grpc
  routes:
  - match: HostSNI(`bootstrap.ubsv.dev`)
    services:
    - name: bootstrap-service
      port: 8089
  tls:
    passthrough: true
