deploy/k8s/ingresses/m1-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: m1-ingressroute-tcp-8084
  namespace: propagation-service
spec:
  entryPoints:
    - prop-grpc
  routes:
  - match: HostSNI(`m1.scaling.ubsv.dev`)
    services:
    - name: propagation-service
      port: 8084
  tls:
    passthrough: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: m1-ingressroute-tcp-8090
  namespace: blob-service
spec:
  entryPoints:
    - blob-http
  routes:
  - match: HostSNI(`m1.scaling.ubsv.dev`)
    services:
    - name: blob-service
      port: 8090
  tls:
    # use m1-cert
#    secretName: m1-tls
    passthrough: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: m1-ingressroute-tcp-8091
  namespace: blob-service
spec:
  entryPoints:
    - blob-grpc
  routes:
  - match: HostSNI(`m1.scaling.ubsv.dev`)
    services:
    - name: blob-service
      port: 8091
  tls:
    # use m1-cert
    passthrough: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: propagation-ingressroute-grpc-8084
  namespace: propagation-service
spec:
  entryPoints:
    - propagation-grpc
  routes:
  - match: HostSNI(`m1.scaling.ubsv.dev`)
    services:
    - name: propagation-service
      port: 8084
  tls:
    passthrough: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: m1-ingressroute-https
  namespace: blob-service
spec:
  entryPoints:
    - websecure
  routes:
  - match: HostSNI(`m1.scaling.ubsv.dev`)
    services:
    - name: blob-service
      port: 8090
  tls:
    passthrough: true
