deploy/k8s/ingresses/m1-propagation-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: propagation-ingressroute-grpc-8084
  namespace: propagation-service
spec:
  entryPoints:
    - propagation-grpc
  routes:
  - match: HostSNI(`propagation.m1.ubsv.dev`)
    services:
    - name: propagation-service
      port: 8084
  tls:
    passthrough: true
