deploy/k8s/ingresses/miner1-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: miner1-ingressroute-tcp-8090
  namespace: miner1
spec:
  entryPoints:
    - blob-http
  routes:
  - match: Host(`miner1.ubsv.dev`)
    kind: Rule
    services:
    - name: miner1
      port: 8090
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: miner1-ingressroute-tcp-8091
  namespace: miner1
spec:
  entryPoints:
    - blob-grpc
  routes:
  - match: Host(`miner1.ubsv.dev`)
    kind: Rule
    services:
    - name: miner1
      port: 8091
