deploy/k8s/ingresses/miner2-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: miner2-ingressroute-tcp-8084
  namespace: miner2
spec:
  entryPoints:
    - prop-grpc
  routes:
  - match: HostSNI(`miner2.allinone.ubsv.dev`)
    services:
    - name: miner2
      port: 8084
  tls:
    passthrough: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: miner2-ingressroute-tcp-8090
  namespace: miner2
spec:
  entryPoints:
    - blob-http
  routes:
  - match: HostSNI(`miner2.allinone.ubsv.dev`)
    services:
    - name: miner2
      port: 8090
  tls:
    # use miner2-cert
#    secretName: miner2-tls
    passthrough: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: miner2-ingressroute-tcp-8091
  namespace: miner2
spec:
  entryPoints:
    - blob-grpc
  routes:
  - match: HostSNI(`miner2.allinone.ubsv.dev`)
    services:
    - name: miner2
      port: 8091
  tls:
    # use miner2-cert
    passthrough: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: miner2-ingressroute-https
  namespace: miner2
spec:
  entryPoints:
    - websecure
  routes:
  - match: HostSNI(`miner2.allinone.ubsv.dev`)
    services:
    - name: miner2
      port: 8090
  tls:
    passthrough: true
